# talk-with-the-world

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chinese_detector.rs  config.rs  focused_text.rs  input_monitor.rs  keyboard_hook.rs  lib.rs  main.rs  selection_translate.rs  translate_service.rs  tray.rs  uia_service.rs
verification/: browser_input.html  chat_input.html  notepad.txt
