[package]
name = "cn2en"
version = "0.1.2"
description = "Seamless Chinese to English translator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "cn2en"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
dirs = "6"
tokio-util = "0.7"
uiautomation = { version = "0.24.4", features = ["control", "pattern"] }
arboard = "3.6"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-opener = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
] }
